--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/sulenchy/MyDiary#readme",
   "dependencies": {
+    "chai-http": "^4.0.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "winston": "^3.0.0"
