--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   },
   "homepage": "https://github.com/sulenchy/MyDiary#readme",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "chai-http": "^4.0.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "morgan": "^1.9.0",
     "winston": "^3.0.0"
   },
   "devDependencies": {
