--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   },
   "homepage": "https://github.com/sulenchy/MyDiary#readme",
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
     "chai-http": "^4.0.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "istanbul": "^0.4.5",
     "morgan": "^1.9.0",
+    "pg": "^7.4.3",
     "winston": "^3.0.0"
   },
   "devDependencies": {
