--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "npm run build && babel-node server/app.js",
     "start:prod": "npm run build && nodemon --watch server --exec babel-node server/app.js",
     "coveralls": "jscoverage lib && YOURPACKAGE_COVERAGE=1 nodeunit --reporter=lcov test | coveralls",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "coverage": "nyc report --reporter=text-lcov | coveralls",
+    "test-db": "babel-node server/models/index.js"
   },
   "repository": {
     "type": "git",
