--- a/package.json
+++ b/package.json
@@ -36,8 +36,10 @@
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "istanbul": "^0.4.5",
+    "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
+    "validatorjs": "^3.14.2",
     "winston": "^3.0.0"
   },
   "devDependencies": {
