--- a/.travis.yml
+++ b/.travis.yml
@@ -6,16 +6,19 @@ node_js:
   - "stable"
  
 
+env:
+- NODE_ENV=test
+
 before_script:
   - npm install nyc coveralls codeclimate-test-reporter -g
+  - npm run test:db
 
 
 
 script:
 - npm test
 
-env:
-- NODE_ENV=test
+
 
 
 after_script: istanbul cover ./node_modules/mocha/bin/_mocha --report lcovonly -- -R spec && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js && rm -rf ./coverage
