--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "start:prod": "npm run build && nodemon --watch server --exec babel-node server/app.js",
     "coveralls": "jscoverage lib && YOURPACKAGE_COVERAGE=1 nodeunit --reporter=lcov test | coveralls",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
-    "test:db": "babel-node server/models/index.js"
+    "reset:db": "babel-node server/models/index.js",
+    "reset:test:db": "set NODE_ENV=test&&babel-node server/models/index.js"
   },
   "repository": {
     "type": "git",
