--- a/package.json
+++ b/package.json
@@ -33,14 +33,15 @@
   "dependencies": {
     "bcrypt": "^3.0.0",
     "body-parser": "^1.18.3",
-    "chai-http": "^4.0.0",
     "chai": "^4.1.2",
+    "chai-http": "^4.0.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "istanbul": "^0.4.5",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
     "pg": "^7.4.3",
+    "swagger-ui-express": "^3.0.10",
     "validatorjs": "^3.14.2",
     "winston": "^3.0.0"
   },
