--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "babel server -d ./dist",
     "lint": "./node_modules/.bin/eslint server/** ",
     "start": "set NODE_ENV=production&&npm run build && babel-node server/app.js",
-    "start:prod": "npm run build && nodemon --watch server --exec babel-node server/app.js",
+    "start:dev": "npm run build && nodemon --watch server --exec babel-node server/app.js",
     "coveralls": "jscoverage lib && YOURPACKAGE_COVERAGE=1 nodeunit --reporter=lcov test | coveralls",
     "coverage": "nyc report --reporter=text-lcov | coveralls",
     "reset:db": "babel-node server/models/index.js",
