feat(send-daily-notification): add send daily email notification
- add node-cron module to package.json
- add node-fetch module to package.json
- add nodemailer module to package.json
- add https url to app.js
- add sendNotificationByEmail() to server/app.js
- add emailNotification.js

[finishes #158887580]

--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "istanbul": "^0.4.5",
     "jsonwebtoken": "^8.3.0",
     "morgan": "^1.9.0",
+    "node-cron": "^1.2.1",
+    "node-fetch": "^2.2.0",
+    "nodemailer": "^4.6.8",
     "pg": "^7.4.3",
     "swagger-ui-express": "^3.0.10",
     "validatorjs": "^3.14.2",
