--- a/package.json
+++ b/package.json
@@ -46,12 +46,12 @@
     "pg": "^7.4.3",
     "swagger-ui-express": "^3.0.10",
     "validatorjs": "^3.14.2",
-    "winston": "^3.0.0"
-  },
-  "devDependencies": {
+    "winston": "^3.0.0",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1"
+  },
+  "devDependencies": {
     "coveralls": "^3.0.2",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^17.0.0",
