--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "istanbul": "^0.4.5",
